--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,11 @@
 		.tagline {
 			font-size: 24px;
 		}
+
+		.grey-text {
+			padding-top: 4px;
+			font-size: 11px;
+		}
 	}
 
 	/* HEADER */
@@ -186,6 +191,7 @@
 	.news {
 		margin-top: 30px;
 		margin-bottom: 30px;
+		font-family: MuseoSansCyrl500;
 	}
 	
 	.controls {
@@ -205,14 +211,9 @@
 
 	.all-news-link a{
 		float: right;
-		font-size: 13px;
-		font-weight: bold;
+		font-size: 16px;
 		padding-top: 20px;
 		padding-right: 2px;
-	}
-	
-	.news {
-		font-family: MuseoSansCyrl500;
 	}
 
 	.news-title {
@@ -223,6 +224,27 @@
 		font-size: 16px;
 		font-weight: bold;
 		color: #24a3d3;
+	}
+
+	@media (max-width: 768px) {
+		.news {
+			margin-top: 16px;
+			margin-bottom: 16px;
+		}
+
+		.news-title {
+			padding-top: 8px;
+		}
+
+		.news-title a {
+			font-size: 13px;
+		}
+
+		.all-news-link a {
+			font-size: 13px;
+		}
+
+
 	}
 	
 	/* NUMBERS SECTION */
@@ -304,7 +326,7 @@
 
 	.all-leadership-link {
 		float: right;
-		font-size: 13px;
+		font-size: 16px;
 		font-weight: bold;
 		padding-top: 20px;
 		padding-right: 2px;
@@ -321,6 +343,10 @@
 		.leadership-name a {
 			padding: 0;
 		}
+
+		.all-leadership-link {
+			font-size: 13px;
+		}
 	}
 
 	/* PRIORITY PROJECTS */
@@ -328,6 +354,10 @@
 	.priority-projects {
 		margin-top: 100px;
 		margin-bottom: 50px;
+	}
+
+	.priority-tagline {
+		margin-bottom: 24px;
 	}
 	
 	.project {
@@ -367,6 +397,10 @@
 		.priority-projects {
 			margin-top: 32px;
 			margin-bottom: 32px;
+		}
+
+		.priority-tagline {
+			margin-bottom: 16px;	
 		}
 
 		.project-img {
@@ -505,7 +539,7 @@
 	}
 
 	.protocol {
-		margin: 12px 0;
+		margin-top: 16px;
 		font-family: MuseoSansCyrl500;
 	}
 
@@ -533,7 +567,7 @@
 	
 	@media (max-width: 768px) {
 		.senate {
-			padding-top: 32px;
+			padding-top: 16px;
 			padding-bottom: 32px;
 		}
 
@@ -698,8 +732,8 @@
 		font-size: 12px;
 	}
 
-	/***********************/
-	/****** RADA PAGE ******/
+	  /***********************/
+	 /****** RADA PAGE ******/
 	/***********************/
 
 
@@ -711,6 +745,7 @@
 
 	.all-navbar {
 		height: 85px;
+		line-height: 85px;
 	}
 	
 	/* RADA section */
@@ -721,7 +756,13 @@
 	
 	@media (max-width: 768px) {
 		.rada {
-			background-color: #f5f5f5;;
+			background-color: #f5f5f5;
+
+		}
+		
+		.rada-tagline {
+			margin-top: 24px;
+			margin-bottom: 0;
 		}
 
 		.member-img-mobile img{
@@ -733,43 +774,120 @@
 			padding-top: 4px;
 		}
 
+	}
+	
+	.rada-content-wrapper {
+		padding-bottom: 350.8px;
+	}
 
+	/* FOOTER-WHITE */
+
+
+	@media (max-width: 768px) {
+
+		.rada-content-wrapper {
+			padding-bottom: 36px;
+		}
 	}
-	
-	/* POSTS section */
-	
-	.posts {
-		padding-bottom: 40px;
-	}
+
+
+	  /***************************/
+	 /****** ALL NEWS PAGE ******/
+	/***************************/
+
+
+	/* all-news section */
 
 	.posts-tagline {
 		padding: 20px 0;
 	}
 
-	.post {
-		margin: 12px 5px;
-		padding: 0 5px 5px 5px;
+	.news-content-wrapper {
+		padding-bottom: 40.8px;
 	}
 
-	.post-name {
-		margin-top: 5px;
+	.load-more-link {
+		font-size: 13px;
+		color: #24a3d3;
+		font-family: MuseoSansCyrl500;
+		margin-top: 30px;
+	}
+
+
+	  /***************************/
+	 /****** OPEN NEWS PAGE *****/
+    /***************************/
+
+	.back-to-news-link {
+		margin-top: 40px;
+		color: #24a3d3;
+		font-size: 20px;
+	}
+
+	.open-news-title {
 		font-weight: bold;
+		color: #24a3d3;
+		margin-top: 24px;
+		margin-bottom: 24px;
 	}
 
-	.post-date {
-		padding-top: 5px;
+	.open-news-conten {
+		font-size: 14px;
+		margin-top: 24px;
 	}
 
-	/* FOOTER-WHITE */
+	.open-news-img {
+		padding-top: 35px;
+	}
 
-	.footer-white {
-		margin-top: 350.8px;
+	.read-also {
+		margin-top: 80px;
 	}
 
 	@media (max-width: 768px) {
-		.footer-white {
-			margin-top: 36px;
+
+		.back-to-news-link {
+			margin-top: 34px;
+			margin-bottom: 21px;
+			font-size: 14px;
+		}
+
+		.open-news-title {
+			margin-top: 16px;
+			font-size: 18px;
+		}
+
+		.open-news-img {
+			padding-top: 0px;
+		}
+
+		.open-news-wrapper {
+			margin-bottom: 574px;
+		}
 	}
+
+
+	  /***************************/
+	 /****** ALL DOCS PAGE *****/
+    /***************************/
+
+	.all-docs-wrapper {
+		margin-top: 40px;
+		margin-bottom: 400px;
 	}
+
+	 .all-doc-tagline {
+	 	margin-bottom: 8px;
+	}
+
+	@media (max-width: 768px) {
+		.all-docs-wrapper {
+			margin-top: 24px;
+			margin-bottom: 40px;
+		}
+	}
+
+
+
 
 	
